LOOKS: Fixed misaligned aside figcaption on mobile

--- a/source/stylesheets/partials/_figure.scss
+++ b/source/stylesheets/partials/_figure.scss
@@ -25,5 +25,8 @@ aside figure {
   @media only screen and (max-width: 768px) {
     width: 50%;
     text-align: left;
+    figcaption {
+      float: left;
+    }
   }
 }
